<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchMatchLayout"
    android:background="#efebe9"
    android:fitsSystemWindows="true">

    <RelativeLayout
        style="@style/MatchMatchLayout">

        <RelativeLayout
            android:id="@+id/layTextLogin"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bg_login">

            <TextView
                android:id="@+id/txtLabelLogin"
                style="@style/WrapWrapLayout"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="70dp"
                android:text="Aplikasi Management Karyawan"
                android:textColor="#424242"
                android:textStyle="bold"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="60dp"
                android:src="@drawable/logo_sregep" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layFormLogin"
            style="@style/MatchWrapLayout"
            android:layout_below="@id/layTextLogin"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_edittext"
            android:padding="5dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:id="@+id/layLogin"
                style="@style/MatchWrapLayout"
                android:padding="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputEmail"
                    style="@style/MatchWrapLayout"
                    android:layout_below="@+id/inputName">

                    <EditText
                        android:id="@+id/edtEmail"
                        style="@style/AppTheme.EditTextMaterial"
                        android:drawableRight="@drawable/ic_email"
                        android:paddingRight="9dp"
                        android:hint="@string/email" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputPassword"
                    style="@style/MatchWrapLayout"
                    android:layout_marginTop="3dp"
                    android:layout_below="@+id/inputEmail"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/edtPassword"
                        style="@style/AppTheme.EditTextMaterial"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layFormLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/label_login"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:theme="@style/ButtonColoredPrimary" />

        <!--<Button
            android:id="@+id/btnToken"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="TOKEN"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:theme="@style/ButtonColoredPrimary" />-->

    </RelativeLayout>

</ScrollView>

